+Put the camera activity in a static layout to enable +Put in toast messages in DetectIDMRZ to allow for progress messages +Reduced the canny edge detection lower threshold from 130 to 50 with dramatically better results detecting faint edges. Less light sensitivity +Ensured exit when no results from each of the functions thus eliminating nullpointer crashes (hopefully). App not crashing now. +TODO: the MRZ detection is going a bit wide especially when zoomed out. May need to change the convolution  rects to fractions of image size instead of static +TODO: the Tess OCR engine may need farther training with the MRZ font

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -20,6 +20,6 @@
         android:id="@+id/mrzCode"
         android:layout_gravity="bottom"
         android:background="#64ffffff"
-        android:textColor="#ffe600" />
+        android:textColor="#0000ff" />
 
 </FrameLayout>
